[gd_scene load_steps=26 format=3 uid="uid://b8b32v2hxn41a"]

[ext_resource type="Script" path="res://prefabs/transmutation_circle.gd" id="1_tvna6"]
[ext_resource type="Texture2D" uid="uid://mpi2ncna5r7t" path="res://assets/sprites/transmutation_circle.png" id="1_wt7sm"]
[ext_resource type="Texture2D" uid="uid://c1bbfaoyv3nay" path="res://assets/sprites/smoke.png" id="3_wawoy"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_57uwi"]
radius = 20.0
height = 52.0

[sub_resource type="AtlasTexture" id="AtlasTexture_st3e1"]
atlas = ExtResource("1_wt7sm")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rkoty"]
atlas = ExtResource("1_wt7sm")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qnfdn"]
atlas = ExtResource("1_wt7sm")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ukk7p"]
atlas = ExtResource("1_wt7sm")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_07f03"]
atlas = ExtResource("1_wt7sm")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nmqbk"]
atlas = ExtResource("1_wt7sm")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vf56a"]
atlas = ExtResource("1_wt7sm")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_msl2p"]
atlas = ExtResource("1_wt7sm")
region = Rect2(384, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ruxxd"]
atlas = ExtResource("1_wt7sm")
region = Rect2(448, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xdv6u"]
atlas = ExtResource("1_wt7sm")
region = Rect2(512, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s0g4q"]
atlas = ExtResource("1_wt7sm")
region = Rect2(576, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_g8ixj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_st3e1")
}],
"loop": false,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkoty")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qnfdn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ukk7p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_07f03")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nmqbk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vf56a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_msl2p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ruxxd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xdv6u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s0g4q")
}],
"loop": false,
"name": &"transmute",
"speed": 12.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_erluf"]
atlas = ExtResource("3_wawoy")
region = Rect2(0, 0, 96, 95)

[sub_resource type="AtlasTexture" id="AtlasTexture_h7ec4"]
atlas = ExtResource("3_wawoy")
region = Rect2(96, 0, 96, 95)

[sub_resource type="AtlasTexture" id="AtlasTexture_mm6yn"]
atlas = ExtResource("3_wawoy")
region = Rect2(192, 0, 96, 95)

[sub_resource type="AtlasTexture" id="AtlasTexture_4njsp"]
atlas = ExtResource("3_wawoy")
region = Rect2(288, 0, 96, 95)

[sub_resource type="AtlasTexture" id="AtlasTexture_dakt0"]
atlas = ExtResource("3_wawoy")
region = Rect2(384, 0, 96, 95)

[sub_resource type="AtlasTexture" id="AtlasTexture_yf8jd"]
atlas = ExtResource("3_wawoy")
region = Rect2(480, 0, 96, 95)

[sub_resource type="AtlasTexture" id="AtlasTexture_g3tlw"]
atlas = ExtResource("3_wawoy")
region = Rect2(576, 0, 96, 95)

[sub_resource type="AtlasTexture" id="AtlasTexture_xeynd"]
atlas = ExtResource("3_wawoy")
region = Rect2(672, 0, 96, 95)

[sub_resource type="SpriteFrames" id="SpriteFrames_qnjrg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_erluf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h7ec4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mm6yn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4njsp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dakt0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yf8jd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g3tlw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xeynd")
}],
"loop": false,
"name": &"idle",
"speed": 12.0
}]

[node name="TransmutationCircle" type="Area2D" groups=["transmutation_circles"]]
modulate = Color(1, 1, 1, 0.207843)
script = ExtResource("1_tvna6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 6)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_57uwi")

[node name="Circle" type="AnimatedSprite2D" parent="."]
z_index = -1
sprite_frames = SubResource("SpriteFrames_g8ixj")
animation = &"idle"
autoplay = "idle"

[node name="Smoke" type="AnimatedSprite2D" parent="."]
visible = false
z_index = 2
position = Vector2(0, -23)
sprite_frames = SubResource("SpriteFrames_qnjrg")
animation = &"idle"
autoplay = "idle"
frame = 7
frame_progress = 1.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="animation_finished" from="Circle" to="." method="_on_circle_animation_finished"]
